--- a/college/templates/cards.html
+++ b/college/templates/cards.html
@@ -38,6 +38,10 @@ h1{
  .card:nth-child(4n+0){
     background: #eb5834;
 }
+ .card:nth-child(5n+0){
+    background: #d5c125e3;
+}
+
  .card-title{
      margin-top: 0;
      font-size: 2em;
