--- a/college/templates/linkpdf.html
+++ b/college/templates/linkpdf.html
@@ -97,9 +97,9 @@ body {
 <form action="/index">
     <button class="button" type="submit">Go Back</button>
 </form>
-Upload using PDF links
-<div style="background:#444857;border:2px solid #1a7725;"><topbar>Using Google Drive or any links</topbar></div><br>
-<center><p style="font-size:12px;">Drive links can be automatically detected (Do link sharing on)</p></center>
+Upload using Links
+<div style="background:#444857;border:2px solid #1a7725;"><topbar>Using Google Drive or other links</topbar></div><br>
+<center><p style="font-size:12px;">Drive links can be automatically detected (Do 'link sharing' on)</p></center>
 <div>
        <form method="post" >
         {% csrf_token %}
@@ -122,6 +122,7 @@ Upload using PDF links
         <br>
         <button  class="upload" style ="width:30%;" type="submit">Submit</button>
  </form>
+    <center><p style="font-size:12px;">Here you can upload any website links .Links related to downloadable files.Also including direct video links</p></center>
 </div>
 
 
