--- a/college/templates/selectupload.html
+++ b/college/templates/selectupload.html
@@ -48,22 +48,18 @@ button:active{
 </style>
 <body>
 <div>
+    <form action="usinglinkpdf/">
+    <button type="submit">Any document or file link</button>
+    </form>
     <form action="usingupload/">
-    <button type="submit">Using 
-
-Upload</button>
+    <button type="submit">Upload Image File</button>
 </form>
 <form action="usinglink/">
-    <button type="submit">Using 
-
-link</button>
+    <button type="submit">By Image Link</button>
 </form>
-    <form action="usinglinkpdf/">
-    <button type="submit">Using
-link(PDF)</button>
-</form>
-
 </div>
-
+<form action="/index">
+    <button class="button" style="margin-top:10px;width:100px;height:60px;background:#ff0000a1;" type="submit">Go Back</button>
+</form>
 </body>
 </html>
