--- a/college/templates/Newtopic.html
+++ b/college/templates/Newtopic.html
@@ -76,8 +76,8 @@ body {
 
 </style>
 <body>
-    <form action="/index">
-        <button class="button" style="margin-left:auto;display:flex;" type="submit">Go Back</button>
+    <form action="/upload/">
+        <button class="button" style="margin-left:auto;display:flex;" type="submit">Upload</button>
     </form>
     <h1>CATEGORY</h1>
     <form action="" method="POST" >
