--- a/college/templates/register.html
+++ b/college/templates/register.html
@@ -82,21 +82,29 @@ body {
         <form action="" method="POST" >
         {% csrf_token %}
         <br>
-        <input class="select" pattern="[0-9]*" inputmode="numeric" autocomplete="off" type="text" name="password" placeholder="Enter" required id="ct">
+        <input type = "text" name = "username" placeholder="Username">
         <br>
-        <input class="button" type="submit" value="LOGIN">
+            <input type = "email" name = "email" placeholder="E-mail">
+        <br>
+            <input type = "password" name = "password1" placeholder="Password">
+        <br>
+            <input type = "password" name = "password2" placeholder="Confirm Password">
+        <br>
+        <input class="button" type="submit" value="REGISTER">
     </form>
-
     {% if m == 0 %}
         <h4>Enter Credentials</h4>
     {% endif %}
     {% if m == 1 %}
-        <h4 style="color:#d71010;">Wrong Credentials</h4>
+        <h4 style="color:#d71010;">Password doesn't matched</h4>
+    {% endif %}
+    {% if m == 2 %}
+        <h4 style="color:#d71010;">Username already exists</h4>
+    {% endif %}
+    {% if m == 3 %}
+        <h4 style="color:#d71010;">Email already exists</h4>
     {% endif %}
     </div>
- <form action="/register/">
-        <input class="button" type="submit" value="Register">
-    </form>
 </body>
 
 </html>
