removed registeration link

--- a/college/templates/login.html
+++ b/college/templates/login.html
@@ -95,7 +95,7 @@ body {
         <h4 style="color:#d71010;">Wrong Credentials</h4>
     {% endif %}
     </div>
- <form action="/register/">
+ <form action="/">
         <input class="button" type="submit" value="Register">
     </form>
 </body>
