--- a/college/templates/link.html
+++ b/college/templates/link.html
@@ -111,8 +111,10 @@ Upload using links
             <option disabled selected value="none"> select Category </option>
             {% if topics %}
                 {% for i in topics %}
+                {% if i.temail == user.email %}
                     {{ i.name }}
                     <option value={{ i.name }}>{{ i.name }}</option>
+                    {% endif %}
                 {% endfor %}
             {% endif %}
         </select>
