--- a/college/templates/register.html
+++ b/college/templates/register.html
@@ -85,9 +85,9 @@ body {
         <br>
             <input class="select" type = "email" name = "email" placeholder="E-mail">
         <br>
-        <input class="select" pattern="[0-9]*" inputmode="numeric" autocomplete="off" type="password" name="password1" placeholder="Enter Password" required id="ct">
+        <input class="select"  autocomplete="off" type="password" name="password1" placeholder="Enter Password" required id="ct">
         <br>
-         <input class="select" pattern="[0-9]*" inputmode="numeric" autocomplete="off" type="password" name="password2" placeholder="Verify Password" required id="ct">
+         <input class="select"  autocomplete="off" type="password" name="password2" placeholder="Verify Password" required id="ct">
         <br>
         <input class="button" type="submit" value="REGISTER">
     </form>
