--- a/college/templates/login.html
+++ b/college/templates/login.html
@@ -83,7 +83,7 @@ body {
         <br>
         <input class="select"  type="text" name="username" placeholder="Enter Username" >
         <br>
-        <input class="select" pattern="[0-9]*" inputmode="numeric" autocomplete="off" type="password" name="password" placeholder="Enter Password" required id="ct">
+        <input class="select"   autocomplete="off" type="password" name="password" placeholder="Enter Password" required id="ct">
         <br>
         <input class="button" type="submit" value="LOGIN">
     </form>
