--- a/college/templates/Newtopic.html
+++ b/college/templates/Newtopic.html
@@ -98,6 +98,9 @@ body {
     {% if error == 2 %}
         New category added
     {% endif %}
+<form action="/upload/">
+    <button class="button" style="margin-top:auto;margin-top:10px;background:#2f37b4;" type="submit">Add Content</button>
+</form>
 </body>
 
 </html>
