entered email login

--- a/college/templates/login.html
+++ b/college/templates/login.html
@@ -81,7 +81,7 @@ body {
         <form action="" method="POST" >
         {% csrf_token %}
         <br>
-        <input class="select"  type="text" name="email" placeholder="Enter Email ID" >
+        <input class="select"  type="text" name="email" placeholder="Enter Email ID" required id="ct" >
         <br>
         <input class="select"   autocomplete="off" type="password" name="password" placeholder="Enter Password" required id="ct">
         <br>
