entered email login

--- a/college/templates/cards.html
+++ b/college/templates/cards.html
@@ -19,13 +19,13 @@ h1{
      color: #4181ee;
 }
  .card{
-     width: 200px;
-     min-height: 100px;
+     width: 50%;
+     height: 50%;
      background: #02b875;
      padding: 30px;
+
      box-sizing: border-box;
      color: #FFF;
-     margin:20px;
      box-shadow: 0px 2px 18px -4px rgba(0,0,0,0.75);
      border-radius: 4%;
 }
@@ -44,9 +44,8 @@ h1{
 
  .card-title{
      margin-top: 0;
-     font-size: 2em;
+     font-size: 1em;
      font-weight: 600;
-     letter-spacing: 1.2px;
      word-wrap: break-word;
 }
 .card-btn{
