entered email login

--- a/college/templates/allimages.html
+++ b/college/templates/allimages.html
@@ -79,6 +79,7 @@ div {
 	margin-left:auto;
 	margin-right:auto;
 
+
 }
 bdiv {
 	width: 320px;
@@ -174,9 +175,16 @@ body {
     <br>
     {% endif %}
 {% endfor %}
+<div>
+
  <form action="/newcategory/">
     <button  class="button" type="submit">New Category</button>
 </form>
+<form action="/upload/">
+    <button class="button" style="margin-top:auto;margin-top:10px;background:#2f37b4;" type="submit">Add Content</button>
+</form>
+
+</div>
 <center><i style="font-size:15px;display:inherit;">Made by <span style="color:yellow;">Rahul Kushwaha</span></i></center>
 </body>
 </html>
